# wasm-chain

./: .gitignore  CMakeLists.txt  README.md  entry.cpp  gen_version_info.sh  make_depend.sh
3rd/: build_llvm.sh
ca/: Crypto_ECDSA.cpp  ca.cpp  ca.h  ca_AwardAlgorithm.cpp  ca_MultipleApi.cpp  ca_MultipleApi.h  ca_block_http_callback.cpp  ca_blockpool.cpp  ca_blockpool.h  ca_global.h  ca_http_api.cpp  ca_http_api.h  ca_interface.cpp  ca_jcAPI.cpp  ca_phoneAPI.cpp  ca_phoneAPI.h  ca_rocksdb.cpp  ca_rocksdb.h  ca_rollback.cpp  ca_synchronization.cpp  ca_test.cpp  ca_trans_utils.cpp  ca_trans_utils.h  ca_transaction.cpp  ca_transaction.h  ca_txhelper.cpp  ca_txhelper.h  ca_txvincache.cpp
cmake/: use-ccache.cmake  use-gold-linker.cmake
common/: config.cpp  config.h  devicepwd.cpp  global.cpp  global.h  version.cpp  version.h
doc/: UENC开发者文档.md  UENC技术说明.md  jsonrpc接口文档.md  区块同步和区块回滚逻辑.md  项目说明.txt
doc/smart-contract/: 合约测试jsonrpc.md  智能合约jsonrpc接口.md  智能合约模块源码说明.md
doc/smart-contract/contract_examples/: call.abi
include/: logging.cpp  logging.h  net_interface.h
main/: main.cpp
net/: dispatcher.cpp  epoll_mode.cpp  handle_event.cpp  handle_event.h  ip_port.cpp  net_api.cpp  net_api.h  net_interface.cpp  node_cache.cpp  node_cache.h  peer_node.cpp  peer_node.h  socket_buf.cpp  test_menu.cpp  work_thread.cpp
proto/src/: ca_test.proto
tests/: abi_tests.cpp  contract_tests.cpp  datastream_tests.cpp
utils/: time_util.cpp  util.cpp
version_update/: version_client.cpp
vm/wasm/: abi_def.hpp  abi_serializer.cpp  abi_serializer.hpp  contract_tools.cpp  wasm_constants.hpp  wasm_context.cpp  wasm_context.hpp  wasm_context_interface.hpp  wasm_interface.cpp  wasm_interface.hpp  wasm_runtime.cpp  wasm_runtime.hpp
vm/wasm/eos-vm/include/eosio/vm/: execution_context.hpp  host_function.hpp  types.hpp
vm/wasm/eos-vm/tools/: hello_driver.cpp
